--- a/jobs/uaa-customized/templates/web/login.html
+++ b/jobs/uaa-customized/templates/web/login.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="~{layouts/main}">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+    layout:decorate="~{layouts/main}">
 <div class="island" layout:fragment="page-content">
     <!--  This h1 is set to `.hidden` now, but that may be an acessibility problem.
     IDK what the most useful h1 would be for accessibility, I've added a simple one here. -->
-    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}" class="visually-hidden">Sign in to Cloud.gov</h1>
+    <h1 th:text="${T(org.cloudfoundry.identity.uaa.zone.IdentityZoneHolder).uaa ? 'Welcome!':'Welcome to '+zone_name+'!'}"
+        class="visually-hidden">Sign in to Cloud.gov</h1>
 
     <div class="island-content">
         <div class="card notice js-notice">
-            <p>This is a U.S. government service. Your use indicates your consent to monitoring, recording, and no expectation of privacy. Misuse is subject to criminal and civil penalties. <a href="#" class="js-notice-read_more">Read more details.</a>
+            <p>This is a U.S. government service. Your use indicates your consent to monitoring, recording, and no
+                expectation of privacy. Misuse is subject to criminal and civil penalties. <a href="#"
+                    class="js-notice-read_more">Read more details.</a>
             </p>
             <input type="submit" value="Agree and continue" class="island-button js-notice-submit" />
             <div class="panel-container">
                 <p>
-                    <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to Cloud.gov.</a>
+                    <a href="https://cloud.gov/docs/getting-started/accounts/">Learn about getting access to
+                        Cloud.gov.</a>
                 </p>
             </div>
         </div>
@@ -20,22 +25,35 @@
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-header">
-                        <button type="button" class="close js-notice-more_information-dismiss" data-dismiss="modal" aria-label="Close">
+                        <button type="button" class="close js-notice-more_information-dismiss" data-dismiss="modal"
+                            aria-label="Close">
                             <span aria-hidden="true">&times;</span>
                         </button>
                         <h4 class="modal-title">This is a U.S. government service.</h4>
                     </div>
                     <div class="modal-body">
-                        <p>Cloud.gov is a U.S. General Services Administration federal government service, for official use by U.S. government employees and contractors working on U.S. government digital services.</p>
-                        <p>All use of Cloud.gov may be monitored, recorded, and subject to audit, by Cloud.gov operations staff and other federal government authorities. There is no expectation of privacy for users of this system. By continuing to use this system, you consent to your use being monitored and recorded.</p>
-                        <p>Unauthorized use is prohibited, and individuals found performing unauthorized activities are subject to disciplinary action including criminal prosecution.</p>
-                        <p>Acceptable uses of Cloud.gov include building and managing government digital services, making and trying test services to learn about how Cloud.gov works, and activities contributing to the development of Cloud.gov itself. We describe these intended uses (along with guidelines and policies) in more detail in the <a href="https://cloud.gov/docs/getting-started/accounts/">Cloud.gov documentation.</a>
+                        <p>Cloud.gov is a U.S. General Services Administration federal government service, for official
+                            use by U.S. government employees and contractors working on U.S. government digital
+                            services.</p>
+                        <p>All use of Cloud.gov may be monitored, recorded, and subject to audit, by Cloud.gov
+                            operations staff and other federal government authorities. There is no expectation of
+                            privacy for users of this system. By continuing to use this system, you consent to your use
+                            being monitored and recorded.</p>
+                        <p>Unauthorized use is prohibited, and individuals found performing unauthorized activities are
+                            subject to disciplinary action including criminal prosecution.</p>
+                        <p>Acceptable uses of Cloud.gov include building and managing government digital services,
+                            making and trying test services to learn about how Cloud.gov works, and activities
+                            contributing to the development of Cloud.gov itself. We describe these intended uses (along
+                            with guidelines and policies) in more detail in the <a
+                                href="https://cloud.gov/docs/getting-started/accounts/">Cloud.gov documentation.</a>
                         </p>
-                        <p>If you have questions about these conditions, please email <a href="mailto:cloud-gov-support@gsa.gov">cloud-gov-support@gsa.gov.</a>
+                        <p>If you have questions about these conditions, please email <a
+                                href="mailto:cloud-gov-support@gsa.gov">cloud-gov-support@gsa.gov.</a>
                         </p>
                     </div>
                     <div class="modal-footer">
-                        <button type="button" class="btn btn-alternate js-notice-more_information-dismiss" data-dismiss="modal">Hide details</button>
+                        <button type="button" class="btn btn-alternate js-notice-more_information-dismiss"
+                            data-dismiss="modal">Hide details</button>
                     </div>
                 </div>
                 <!-- /.modal-content -->
@@ -45,10 +63,7 @@
         <!-- /.modal -->
         <div class="js-full_login">
             <th:block th:if="${fieldUsernameShow}">
-                <div 
-                    th:if="${showLoginLinks==true and fieldUsernameShow}"
-                    class="card saml-login"
-                >
+                <div th:if="${showLoginLinks==true and fieldUsernameShow}" class="card saml-login">
                     <div class="row offset-4">
                         <div class="col col-xs-24 offset-4">
                             <h2 class="h2-black mbxl mts">
@@ -58,21 +73,15 @@
                     </div>
 
                     <div class="row offset-4">
-                        <div 
-                            th:each="idp : ${idpDefinitions}" 
-                            th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}" 
-                            class="col col-xs-20 col-xs-push-2 offset-4"
-                        >
+                        <div th:each="idp : ${idpDefinitions}"
+                            th:if="${idp.showSamlLink and idp.idpEntityAlias == 'cloud.gov'}"
+                            class="col col-xs-20 col-xs-push-2 offset-4">
                             <!-- Cloud.gov IDP -->
-                            <a href="" 
-                                th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
-                                class="saml-login-link btn--block btn--l color-blue text-left"
-                                >
-                                <img src="" 
-                                    th:src="${idp.iconUrl}" 
-                                    class="badge--inline txt-m mls mrm" 
-                                    alt="cloud.gov icon" 
-                                />
+                            <a href=""
+                                th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}"
+                                class="saml-login-link btn--block btn--l color-blue text-left">
+                                <img src="" th:src="${idp.iconUrl}" class="badge--inline txt-m mls mrm"
+                                    alt="cloud.gov icon" />
                                 <span class="txt-m">Sign in with Cloud.gov</span>
                             </a>
                         </div>
@@ -89,21 +98,14 @@
                     </div>
 
                     <div class="row offset-4">
-                        <div 
-                            th:each="idp : ${idpDefinitions}" 
-                            th:if="${idp.showSamlLink and idp.idpEntityAlias != 'cloud.gov'}" 
-                            class="col col-xs-12 offset-4"
-                        >
+                        <div th:each="idp : ${idpDefinitions}"
+                            th:if="${idp.showSamlLink and idp.idpEntityAlias != 'cloud.gov'}"
+                            class="col col-xs-12 offset-4">
                             <!-- SAML -->
-                            <a href="" 
-                                th:href="@{saml/discovery(returnIDParam=idp,entityID=${entityID},idp=${idp.idpEntityAlias},isPassive=true)}" 
-                                class="saml-login-link btn--block btn--m color-blue text-left"
-                                >
-                                <img src="" 
-                                    th:src="${idp.iconUrl}" 
-                                    class="badge--inline txt-m" 
-                                    th:alt="${idp.linkText}" 
-                                />
+                            <a href="" th:href="@{saml2/authenticate/{entityAlias}(entityAlias=${idp.idpEntityAlias})}"
+                                class="saml-login-link btn--block btn--m color-blue text-left">
+                                <img src="" th:src="${idp.iconUrl}" class="badge--inline txt-m"
+                                    th:alt="${idp.linkText}" />
                                 <span th:text="${idp.linkText}" class="txt-m">
                                     Use your corporate credentials
                                 </span>
@@ -111,33 +113,33 @@
                         </div>
                         <div th:each="oauthLink : ${oauthLinks}" class="col col-xs-12 offset-4">
                             <!-- OAuth -->
-                            <a href="" 
-                                th:href="${oauthLink.key}" 
-                                th:text="${oauthLink.value}" 
-                                class="saml-login-link btn--block btn--m color-blue text-left"
-                                >
-                                <img class="badge--inline txt-m" alt="US Flag icon" src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAALCAMAAABBPP0LAAAAG1BMVEUdM7EeNLIeM7HgQCDaPh/bPh/bPx/////bPyBEby41AAAAUElEQVQI123MNw4CABDEwD3jC/9/MQ1BQrgeOSkIqYe2o2FZtthXgQLgbHVMZdlsfUQFQnHtjP1+8BUhBDKOqtmfot6ojqPzR7TjdU+f6vkED+IDPhTBcMAAAAAASUVORK5CYII=" />
+                            <a href="" th:href="${oauthLink.key}" th:text="${oauthLink.value}"
+                                class="saml-login-link btn--block btn--m color-blue text-left">
+                                <img class="badge--inline txt-m" alt="US Flag icon"
+                                    src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAALCAMAAABBPP0LAAAAG1BMVEUdM7EeNLIeM7HgQCDaPh/bPh/bPx/////bPyBEby41AAAAUElEQVQI123MNw4CABDEwD3jC/9/MQ1BQrgeOSkIqYe2o2FZtthXgQLgbHVMZdlsfUQFQnHtjP1+8BUhBDKOqtmfot6ojqPzR7TjdU+f6vkED+IDPhTBcMAAAAAASUVORK5CYII=" />
                                 <span th:text="${oauthLink.value}" class="txt-m">
                                     Use your corporate credentials
                                 </span>
                             </a>
-                    </div>
+                        </div>
                     </div>
                 </div>
             </th:block>
         </div>
     </div>
     <div id="cli-info" class="panel-container hidden">
-      <div class="island-content">
-        <div class="card-transparent notice">
-          <p>Developers can log in via the command line:</p>
-          <pre class="card code">cf login -a api.fr.cloud.gov  --sso</pre>
-          <a href="https://cloud.gov/docs/getting-started/setup/#quick-reference">See our documentation for login details</a>
+        <div class="island-content">
+            <div class="card-transparent notice">
+                <p>Developers can log in via the command line:</p>
+                <pre class="card code">cf login -a api.fr.cloud.gov  --sso</pre>
+                <a href="https://cloud.gov/docs/getting-started/setup/#quick-reference">See our documentation for login
+                    details</a>
+            </div>
         </div>
-      </div>
     </div>
 
-    <script type="text/javascript" src="/resources/javascripts/display_notice.js" th:src="@{'/resources/javascripts/display_notice.js'}"></script>
+    <script type="text/javascript" src="/resources/javascripts/display_notice.js"
+        th:src="@{'/resources/javascripts/display_notice.js'}"></script>
 </div>
 
 </html>
